--- a/deep-learning-with-python-by-francois-chollet/2-mathematical-building-blocks/1_gears_of_neural_networks_tensor_operations.ipynb
+++ b/deep-learning-with-python-by-francois-chollet/2-mathematical-building-blocks/1_gears_of_neural_networks_tensor_operations.ipynb
@@ -6,7 +6,7 @@
       "name": "1-gears-of-neural-networks--tensor-operations.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMk9RttjoqqUcv16wGz9LJe",
+      "authorship_tag": "ABX9TyPt7ybyMen7vJfcJ1vEzUuB",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -194,7 +194,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "212ffbfa-b155-4066-cb57-b04ff12aefbc"
+        "outputId": "8764b107-285c-40a1-8655-8b207be95ede"
       },
       "source": [
         "z = x + y\n",
@@ -206,19 +206,19 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "array([[0.5833715 , 1.64167321, 0.47598757, ..., 0.94894288, 1.06589035,\n",
-              "        0.57077926],\n",
-              "       [0.79683924, 1.69161099, 0.78681001, ..., 1.02353888, 1.45680047,\n",
-              "        0.93536571],\n",
-              "       [1.5425921 , 1.03753149, 1.65542218, ..., 1.56734636, 0.75605085,\n",
-              "        0.39763872],\n",
+              "array([[1.14745926, 1.23403304, 1.07145376, ..., 0.69298026, 0.97656831,\n",
+              "        0.91711773],\n",
+              "       [1.00544481, 1.33681472, 0.49318897, ..., 0.48758283, 0.46381589,\n",
+              "        0.75134547],\n",
+              "       [0.58401856, 0.84126636, 1.53273405, ..., 1.22265976, 0.87427216,\n",
+              "        0.80675042],\n",
               "       ...,\n",
-              "       [0.87791879, 1.24838634, 0.94751821, ..., 0.47714805, 1.28274589,\n",
-              "        1.19634836],\n",
-              "       [1.79288733, 0.97149845, 0.96372108, ..., 1.14259272, 1.05272603,\n",
-              "        0.70999261],\n",
-              "       [0.73725283, 1.00935213, 1.97691635, ..., 1.08769461, 1.00669283,\n",
-              "        1.40341021]])"
+              "       [0.69448852, 1.619114  , 0.5624287 , ..., 1.54145763, 1.70469161,\n",
+              "        1.20280307],\n",
+              "       [1.01686823, 0.18868716, 1.2857621 , ..., 0.59698089, 1.49297035,\n",
+              "        0.94123989],\n",
+              "       [0.80501938, 0.87875109, 1.20982281, ..., 1.07455795, 1.06342163,\n",
+              "        1.07836931]])"
             ]
           },
           "metadata": {},
@@ -233,7 +233,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "64be9905-1259-484b-bf4e-f65c953fecfa"
+        "outputId": "7c4861e3-d85d-4c19-b58d-e1e73fe50aff"
       },
       "source": [
         "z = np.maximum(z, 0)\n",
@@ -245,19 +245,19 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "array([[0.5833715 , 1.64167321, 0.47598757, ..., 0.94894288, 1.06589035,\n",
-              "        0.57077926],\n",
-              "       [0.79683924, 1.69161099, 0.78681001, ..., 1.02353888, 1.45680047,\n",
-              "        0.93536571],\n",
-              "       [1.5425921 , 1.03753149, 1.65542218, ..., 1.56734636, 0.75605085,\n",
-              "        0.39763872],\n",
+              "array([[1.14745926, 1.23403304, 1.07145376, ..., 0.69298026, 0.97656831,\n",
+              "        0.91711773],\n",
+              "       [1.00544481, 1.33681472, 0.49318897, ..., 0.48758283, 0.46381589,\n",
+              "        0.75134547],\n",
+              "       [0.58401856, 0.84126636, 1.53273405, ..., 1.22265976, 0.87427216,\n",
+              "        0.80675042],\n",
               "       ...,\n",
-              "       [0.87791879, 1.24838634, 0.94751821, ..., 0.47714805, 1.28274589,\n",
-              "        1.19634836],\n",
-              "       [1.79288733, 0.97149845, 0.96372108, ..., 1.14259272, 1.05272603,\n",
-              "        0.70999261],\n",
-              "       [0.73725283, 1.00935213, 1.97691635, ..., 1.08769461, 1.00669283,\n",
-              "        1.40341021]])"
+              "       [0.69448852, 1.619114  , 0.5624287 , ..., 1.54145763, 1.70469161,\n",
+              "        1.20280307],\n",
+              "       [1.01686823, 0.18868716, 1.2857621 , ..., 0.59698089, 1.49297035,\n",
+              "        0.94123989],\n",
+              "       [0.80501938, 0.87875109, 1.20982281, ..., 1.07455795, 1.06342163,\n",
+              "        1.07836931]])"
             ]
           },
           "metadata": {},
@@ -292,7 +292,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "8ff850ee-cc28-4754-9879-c7e80b223290"
+        "outputId": "0b85777a-2422-4d53-d291-9dd3b6392668"
       },
       "source": [
         "t0 = time.time()\n",
@@ -329,7 +329,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "99c7c97d-8bb2-4578-c1e4-6e2b0f6e3363"
+        "outputId": "f44b3cec-19fe-4eba-b8d3-1292862e9d7a"
       },
       "source": [
         "t0 = time.time()\n",
@@ -345,7 +345,7 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Took: 2.70 s\n"
+            "Took: 2.79 s\n"
           ]
         }
       ]
@@ -394,7 +394,7 @@
         "X = np.random.random((32, 10))    # X is a random matrix with shape (32, 10).\n",
         "y = np.random.random((10, ))      # y is a random vector with shape (10,)."
       ],
-      "execution_count": 14,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -410,16 +410,16 @@
       "cell_type": "code",
       "metadata": {
         "id": "kdDFMjfzEGoJ",
-        "outputId": "8b333369-9cea-47af-c071-3509935606a6",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "17689763-4b00-48fe-a15a-43b3b266573c"
       },
       "source": [
         "y = np.expand_dims(y, axis=0)    # The shape of y is now (1, 10).\n",
         "y.shape"
       ],
-      "execution_count": 15,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -429,7 +429,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 15
+          "execution_count": 11
         }
       ]
     },
@@ -446,17 +446,17 @@
       "cell_type": "code",
       "metadata": {
         "id": "JopbQXUJEV9F",
-        "outputId": "dc040242-6c6d-4a19-f9ef-a1c7648c5cd1",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "936c5d0e-fb5a-47e1-ef68-de426c7ba7bb"
       },
       "source": [
         "# Repeat y 32 times along axis 0 to obtain Y, which has shape (32, 10).\n",
         "Y = np.concatenate([y] * 32, axis=0)\n",
         "Y.shape"
       ],
-      "execution_count": 31,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -466,7 +466,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 31
+          "execution_count": 12
         }
       ]
     },
@@ -500,7 +500,7 @@
         "      x[i, j] += y[j]\n",
         "  return x            "
       ],
-      "execution_count": 33,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -519,10 +519,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "Jux8gzwKJwyu",
-        "outputId": "83bee2ff-4a23-45d4-a96e-3499b259bffa",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "330cc806-552b-4356-93cd-26557dd34675"
       },
       "source": [
         "x = np.random.random((64, 3, 32, 10))   # x is a random tensor with shape (64, 3, 32, 10).\n",
@@ -531,7 +531,7 @@
         "z = np.maximum(x, y)                    # The output z has shape (64, 3, 32, 10) like x\n",
         "z.shape"
       ],
-      "execution_count": 34,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -541,7 +541,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 34
+          "execution_count": 14
         }
       ]
     },
@@ -549,10 +549,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "fveF8cJNKfeD",
-        "outputId": "3c4aebcb-dd95-42b3-f0e1-46c3d3dc11e7",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "fa9b49b2-772e-4797-8354-ea38baafa352"
       },
       "source": [
         "x = np.random.random((64, 3, 32, 10))   # x is a random tensor with shape (64, 3, 32, 10).\n",
@@ -561,7 +561,7 @@
         "z = np.maximum(x, y)                    # The output z has shape (64, 3, 32, 10) like x\n",
         "z.shape"
       ],
-      "execution_count": 37,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -571,7 +571,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 37
+          "execution_count": 15
         }
       ]
     },
@@ -588,6 +588,224 @@
       "cell_type": "markdown",
       "metadata": {
         "id": "jhD9CzmeKdhy"
+      },
+      "source": [
+        "The tensor product, or dot product (not to be confused with an element-wise product, the * operator), is one of the most common, most useful tensor operations.\n",
+        "\n",
+        "In NumPy, a tensor product is done using the np.dot function (because the mathematical notation for tensor product is usually a dot):"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "HXiR3GBIDJap",
+        "outputId": "19fc442f-5ee7-42eb-c875-871c58e1cc0d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "x = np.random.random((32, ))\n",
+        "y = np.random.random((32, ))\n",
+        "\n",
+        "z = np.dot(x, y)\n",
+        "z"
+      ],
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "7.890335521359871"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 16
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "4JX3IbgxDcwM"
+      },
+      "source": [
+        "In mathematical notation, you’d note the operation with a dot (•):\n",
+        "\n",
+        "```python\n",
+        "z = x • y\n",
+        "```\n",
+        "\n",
+        "Mathematically, what does the dot operation do? \n",
+        "\n",
+        "Let’s start with the dot product of\n",
+        "two vectors, x and y. It’s computed as follows:"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "gFedHV0pDk-P"
+      },
+      "source": [
+        "def naive_vector_dot(x, y):\n",
+        "  # x and y are NumPy vectors\n",
+        "  assert len(x.shape) == 1\n",
+        "  assert len(y.shape) == 1\n",
+        "  assert x.shape[0] == y.shape[0]\n",
+        "\n",
+        "  z = 0.0\n",
+        "  for i in range(x.shape[0]):\n",
+        "    z += x[i] * y[i]\n",
+        "  return z"
+      ],
+      "execution_count": 17,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "IGpdxG1SERzQ"
+      },
+      "source": [
+        "You’ll have noticed that the dot product between two vectors is a scalar and that only vectors with the same number of elements are compatible for a dot product.\n",
+        "\n",
+        "You can also take the dot product between a matrix x and a vector y, which returns a vector where the coefficients are the dot products between y and the rows of x."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "yAP0iszEEj1C"
+      },
+      "source": [
+        "def naive_matrix_vector_dot(x, y):\n",
+        "  # x is a NumPy matrix\n",
+        "  assert len(x.shape) == 2\n",
+        "  # y is a NumPy vector\n",
+        "  assert len(y.shape) == 1\n",
+        "  # The first dimension of x must be the same as the 0th dimension of y!\n",
+        "  assert x.shape[1] == y.shape[0]\n",
+        "\n",
+        "  # This operation returns a vector of 0s with the same shape as y.\n",
+        "  z = np.zeros(x.shape[0])\n",
+        "  for i in range(x.shape[0]):\n",
+        "    for j in range(x.shape[1]):\n",
+        "      z[i] += x[i, j] * y[j]\n",
+        "  return z"
+      ],
+      "execution_count": 18,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "LvuIjsyEHJBn"
+      },
+      "source": [
+        "You could also reuse the code we wrote previously, which highlights the relationship between a matrix-vector product and a vector product:"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "FjvJjmBKHKjB"
+      },
+      "source": [
+        "def naive_matrix_vector_dot(x, y):\n",
+        "  # x is a NumPy matrix\n",
+        "  assert len(x.shape) == 2\n",
+        "  # y is a NumPy vector\n",
+        "  assert len(y.shape) == 1\n",
+        "  # The first dimension of x must be the same as the 0th dimension of y!\n",
+        "  assert x.shape[1] == y.shape[0]\n",
+        "\n",
+        "  # This operation returns a vector of 0s with the same shape as y.\n",
+        "  z = np.zeros(x.shape[0])\n",
+        "  for i in range(x.shape[0]):\n",
+        "    z[i] = naive_matrix_vector_dot(x[i, :], y)\n",
+        "  return z"
+      ],
+      "execution_count": 19,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Appp3A6hL1la"
+      },
+      "source": [
+        "Note that as soon as one of the two tensors has an ndim greater than 1, dot is no longer symmetric, which is to say that `dot(x, y)` isn’t the same as `dot(y, x)`.\n",
+        "\n",
+        "Of course, a dot product generalizes to tensors with an arbitrary number of axes.\n",
+        "\n",
+        "The most common applications may be the dot product between two matrices. You can take the dot product of two matrices `x` and `y (dot(x, y))` if and only if `x.shape[1] == y.shape[0]`. The result is a matrix with shape `(x.shape[0], y.shape[1])`, where the coefficients are the vector products between the rows of x and the columns of y."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "RJhv7sqFMusc"
+      },
+      "source": [
+        "def naive_matrix_dot(x, y):\n",
+        "  # x and y are NumPy matrices\n",
+        "  assert len(x.shape) == 2\n",
+        "  assert len(y.shape) == 2\n",
+        "  # The first dimension of x must be the same as the 0th dimension of y!\n",
+        "  assert x.shape[1] == y.shape[0]\n",
+        "\n",
+        "  # This operation returns a matrix of 0s with a specific shape.\n",
+        "  z = np.zeros((x.shape[0], y.shape[1]))\n",
+        "  for i in range(x.shape[0]):     # Iterates over the rows of x . . .\n",
+        "    for j in range(y.shape[1]):    # . . . and over the columns of y\n",
+        "      row_x = x[i, :]\n",
+        "      column_y = y[:, j]\n",
+        "      z[i, j] = naive_vector_dot(row_x, column_y)\n",
+        "  return z"
+      ],
+      "execution_count": 20,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "0l0Aqc3zOa_E"
+      },
+      "source": [
+        "To understand dot-product shape compatibility, it helps to visualize the input and output tensors by aligning them as shown.\n",
+        "\n",
+        "<img src='https://github.com/rahiakela/data-learning-research-and-practice/blob/main/deep-learning-with-python-by-francois-chollet/2-mathematical-building-blocks/images/1.png?raw=1' width='800'/>\n",
+        "\n",
+        "In the figure, x, y, and z are pictured as rectangles (literal boxes of coefficients). Because the rows of x and the columns of y must have the same size, it follows that the width of x must match the height of y. \n",
+        "\n",
+        "If you go on to develop new machine learning algorithms, you’ll likely be drawing such diagrams often.\n",
+        "\n",
+        "More generally, you can take the dot product between higher-dimensional tensors,\n",
+        "following the same rules for shape compatibility as outlined earlier for the 2D case:\n",
+        "\n",
+        "```python\n",
+        "(a, b, c, d) • (d,) → (a, b, c)\n",
+        "(a, b, c, d) • (d, e) → (a, b, c, e)\n",
+        "```\n",
+        "\n",
+        "And so on."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "kBP2ZSG5QPpr"
+      },
+      "source": [
+        "##Tensor reshaping"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "hLmjsg1UQzYu"
       },
       "source": [
         ""
