--- a/deep-learning-with-python-by-francois-chollet/2-mathematical-building-blocks/1_gears_of_neural_networks_tensor_operations.ipynb
+++ b/deep-learning-with-python-by-francois-chollet/2-mathematical-building-blocks/1_gears_of_neural_networks_tensor_operations.ipynb
@@ -6,7 +6,7 @@
       "name": "1-gears-of-neural-networks--tensor-operations.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPt7ybyMen7vJfcJ1vEzUuB",
+      "authorship_tag": "ABX9TyPNxOYOTWGeDw2gaJfzVHyl",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -194,7 +194,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "8764b107-285c-40a1-8655-8b207be95ede"
+        "outputId": "31eb3323-9670-4a23-cd87-02fe3d4b34ab"
       },
       "source": [
         "z = x + y\n",
@@ -206,19 +206,19 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "array([[1.14745926, 1.23403304, 1.07145376, ..., 0.69298026, 0.97656831,\n",
-              "        0.91711773],\n",
-              "       [1.00544481, 1.33681472, 0.49318897, ..., 0.48758283, 0.46381589,\n",
-              "        0.75134547],\n",
-              "       [0.58401856, 0.84126636, 1.53273405, ..., 1.22265976, 0.87427216,\n",
-              "        0.80675042],\n",
+              "array([[0.64264313, 1.17813229, 0.38836488, ..., 1.17675767, 0.67559565,\n",
+              "        0.52014324],\n",
+              "       [1.02889213, 0.98107885, 1.30349988, ..., 1.13838735, 1.4918992 ,\n",
+              "        0.78090718],\n",
+              "       [0.73222359, 1.17283459, 1.35802968, ..., 1.53536784, 1.03537402,\n",
+              "        0.74363383],\n",
               "       ...,\n",
-              "       [0.69448852, 1.619114  , 0.5624287 , ..., 1.54145763, 1.70469161,\n",
-              "        1.20280307],\n",
-              "       [1.01686823, 0.18868716, 1.2857621 , ..., 0.59698089, 1.49297035,\n",
-              "        0.94123989],\n",
-              "       [0.80501938, 0.87875109, 1.20982281, ..., 1.07455795, 1.06342163,\n",
-              "        1.07836931]])"
+              "       [0.63889677, 0.71866606, 1.09696021, ..., 0.97608081, 1.15011559,\n",
+              "        1.48715479],\n",
+              "       [1.27953243, 0.26520434, 0.67983589, ..., 0.62082675, 1.4793035 ,\n",
+              "        1.13441423],\n",
+              "       [1.75819403, 1.46878373, 0.25220312, ..., 1.0944633 , 0.38098874,\n",
+              "        1.2318838 ]])"
             ]
           },
           "metadata": {},
@@ -233,7 +233,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "7c4861e3-d85d-4c19-b58d-e1e73fe50aff"
+        "outputId": "0bc469a4-b84b-4922-bc3d-b670cfb31ce6"
       },
       "source": [
         "z = np.maximum(z, 0)\n",
@@ -245,19 +245,19 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "array([[1.14745926, 1.23403304, 1.07145376, ..., 0.69298026, 0.97656831,\n",
-              "        0.91711773],\n",
-              "       [1.00544481, 1.33681472, 0.49318897, ..., 0.48758283, 0.46381589,\n",
-              "        0.75134547],\n",
-              "       [0.58401856, 0.84126636, 1.53273405, ..., 1.22265976, 0.87427216,\n",
-              "        0.80675042],\n",
+              "array([[0.64264313, 1.17813229, 0.38836488, ..., 1.17675767, 0.67559565,\n",
+              "        0.52014324],\n",
+              "       [1.02889213, 0.98107885, 1.30349988, ..., 1.13838735, 1.4918992 ,\n",
+              "        0.78090718],\n",
+              "       [0.73222359, 1.17283459, 1.35802968, ..., 1.53536784, 1.03537402,\n",
+              "        0.74363383],\n",
               "       ...,\n",
-              "       [0.69448852, 1.619114  , 0.5624287 , ..., 1.54145763, 1.70469161,\n",
-              "        1.20280307],\n",
-              "       [1.01686823, 0.18868716, 1.2857621 , ..., 0.59698089, 1.49297035,\n",
-              "        0.94123989],\n",
-              "       [0.80501938, 0.87875109, 1.20982281, ..., 1.07455795, 1.06342163,\n",
-              "        1.07836931]])"
+              "       [0.63889677, 0.71866606, 1.09696021, ..., 0.97608081, 1.15011559,\n",
+              "        1.48715479],\n",
+              "       [1.27953243, 0.26520434, 0.67983589, ..., 0.62082675, 1.4793035 ,\n",
+              "        1.13441423],\n",
+              "       [1.75819403, 1.46878373, 0.25220312, ..., 1.0944633 , 0.38098874,\n",
+              "        1.2318838 ]])"
             ]
           },
           "metadata": {},
@@ -292,7 +292,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "0b85777a-2422-4d53-d291-9dd3b6392668"
+        "outputId": "ae00911b-1951-4867-90bf-2cad87a51182"
       },
       "source": [
         "t0 = time.time()\n",
@@ -329,7 +329,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "f44b3cec-19fe-4eba-b8d3-1292862e9d7a"
+        "outputId": "0b677c1c-5c27-4e12-c1e4-9af1772e6ffd"
       },
       "source": [
         "t0 = time.time()\n",
@@ -345,7 +345,7 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Took: 2.79 s\n"
+            "Took: 2.70 s\n"
           ]
         }
       ]
@@ -413,7 +413,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "17689763-4b00-48fe-a15a-43b3b266573c"
+        "outputId": "513fe7be-ef48-4db3-b909-b3ad6d7e0ae1"
       },
       "source": [
         "y = np.expand_dims(y, axis=0)    # The shape of y is now (1, 10).\n",
@@ -449,7 +449,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "936c5d0e-fb5a-47e1-ef68-de426c7ba7bb"
+        "outputId": "8f5ea92d-f89d-4e91-d2fd-8375ede9d0de"
       },
       "source": [
         "# Repeat y 32 times along axis 0 to obtain Y, which has shape (32, 10).\n",
@@ -522,7 +522,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "330cc806-552b-4356-93cd-26557dd34675"
+        "outputId": "ee448220-89a1-4850-daf8-bebb38f89445"
       },
       "source": [
         "x = np.random.random((64, 3, 32, 10))   # x is a random tensor with shape (64, 3, 32, 10).\n",
@@ -552,7 +552,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "fa9b49b2-772e-4797-8354-ea38baafa352"
+        "outputId": "1633926a-cbb9-4994-a220-7d771de9b7fd"
       },
       "source": [
         "x = np.random.random((64, 3, 32, 10))   # x is a random tensor with shape (64, 3, 32, 10).\n",
@@ -599,10 +599,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "HXiR3GBIDJap",
-        "outputId": "19fc442f-5ee7-42eb-c875-871c58e1cc0d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "5c9eb1d7-a3ac-4ff0-e8f9-253dbf8fbaf9"
       },
       "source": [
         "x = np.random.random((32, ))\n",
@@ -617,7 +617,7 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "7.890335521359871"
+              "7.717886292184373"
             ]
           },
           "metadata": {},
@@ -808,7 +808,199 @@
         "id": "hLmjsg1UQzYu"
       },
       "source": [
-        ""
+        "A third type of tensor operation that’s essential to understand is tensor reshaping.\n",
+        "\n",
+        "```python\n",
+        "train_images = train_images.reshape((60000, 28 * 28))\n",
+        "```\n",
+        "\n",
+        "Reshaping a tensor means rearranging its rows and columns to match a target shape.\n",
+        "\n",
+        "Naturally, the reshaped tensor has the same total number of coefficients as the initial tensor."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "475Nb3KWvy69",
+        "outputId": "208c62ab-cc9f-4db3-b201-e6a8007e4623",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "x = np.array([\n",
+        "   [0., 1.],\n",
+        "   [2., 3.],\n",
+        "   [4., 5.]           \n",
+        "])\n",
+        "\n",
+        "x.shape"
+      ],
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(3, 2)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 26
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "hiMERgWawn70",
+        "outputId": "778da129-26bb-473c-efe9-1c552806c1de",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "x = x.reshape((6, 1))\n",
+        "x.shape"
+      ],
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(6, 1)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 28
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "daidlu3fw6Vm",
+        "outputId": "b054507e-4ee8-44ce-ea13-d676196bea3c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "x"
+      ],
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[0.],\n",
+              "       [1.],\n",
+              "       [2.],\n",
+              "       [3.],\n",
+              "       [4.],\n",
+              "       [5.]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 29
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "2Swa9pjvwzEH",
+        "outputId": "0147a755-fca3-4100-ea39-09d2dd4b5f50",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "x = x.reshape((2, 3))\n",
+        "x.shape"
+      ],
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(2, 3)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 30
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "2nl4sefExCWO",
+        "outputId": "ceda9085-8a48-4d18-cfd7-ed380aff0ba9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "x"
+      ],
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[0., 1., 2.],\n",
+              "       [3., 4., 5.]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 31
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "xuC11sTuxLUE"
+      },
+      "source": [
+        "A special case of reshaping that’s commonly encountered is transposition.\n",
+        "\n",
+        "Transposing a matrix means exchanging its rows and its columns, so that `x[i, :] becomes x[:, i]`:"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "rw13N7AGxSdu",
+        "outputId": "f00cda46-a6fe-464e-b14f-a9213cc3f041",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "x = np.zeros((300, 20))\n",
+        "\n",
+        "x = np.transpose(x)\n",
+        "x.shape"
+      ],
+      "execution_count": 32,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(20, 300)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 32
+        }
       ]
     }
   ]
